fix #1888 ui: Scrollbar width increase to 7px

--- a/src/client/components/setting-panel/list.styl
+++ b/src/client/components/setting-panel/list.styl
@@ -1,7 +1,7 @@
 .item-list-wrap
   overflow-y scroll
   &::-webkit-scrollbar
-    width 0
+    width 3px
 .list-item-edit
 .list-item-apply
 .list-item-remove
