--- a/src/client/css/basic.styl
+++ b/src/client/css/basic.styl
@@ -12,7 +12,9 @@ body
   font-size 12px
 ::-webkit-scrollbar
   background alpha(main, .5)
-  width 3px
+  width 7px
+  &:hover
+    width 12px
 
 ::-webkit-scrollbar-track
   -webkit-box-shadow none
